# agentic

./: MANIFEST.in  PRChanges.patch  PRChangesTest.patch  README.md  installed_packages.txt  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: PR_Summary_Agent.yml  ci.yaml  pr-summary-agent.yml  prepare-update-version.yaml  publish-docs.yaml  publish-package-to-pypi.yaml  publish-to-pypi.yaml  test-publish-to-pypi.yaml  test-update-version.yaml  update-version.yaml
0.3.10/: 404.html  index.html  sitemap.xml
0.3.10/FLOWS/: index.html
0.3.10/Internals/: index.html
0.3.10/Settings/: index.html
0.3.10/agent-memory/: index.html
0.3.10/building-agents/: index.html
0.3.10/core-concepts/: index.html
0.3.10/data-model/: index.html
0.3.10/deployment/: index.html
0.3.10/example-agents/: index.html
0.3.10/getting-started/: index.html
0.3.10/glossary/: index.html
0.3.10/interacting-with-agents/: index.html
0.3.10/planning-agents/: index.html
0.3.10/rag-support/: index.html
0.3.10/search/: search_index.json
0.3.10/tools/: index.html
0.3.8/: 404.html  index.html  sitemap.xml
0.3.8/FLOWS/: index.html
0.3.8/Internals/: index.html
0.3.8/Settings/: index.html
0.3.8/agent-memory/: index.html
0.3.8/building-agents/: index.html
0.3.8/core-concepts/: index.html
0.3.8/data-model/: index.html
0.3.8/deployment/: index.html
0.3.8/example-agents/: index.html
0.3.8/getting-started/: index.html
0.3.8/glossary/: index.html
0.3.8/interacting-with-agents/: index.html
0.3.8/planning-agents/: index.html
deployment/: .dockerignore  Dockerfile  Dockerfile.dashboard  README.md  docker-entrypoint.sh
dev/: sitemap.xml
docs/: CLI.md  Internals.md  Tools.md  building-agents.md  example-agents.md  glossary.md  index.md  rag-support.md  rest-api-tool.md
examples/: a2a_team_example.py  airbnb_calendar_agent.py  basic_agent.py  basic_agent_reasoning.py  geolocation_agent.py  march_madness.py  news_demo.py  oss_deep_research.py  oss_operator.py  packing_list_agent.py  podcast.py  restaurant_agent.py  web_search_agent.py
pr_agent/: PR_agent.py  code_rag_agent.py  code_rag_agent.txt  git_grep_agent.py  summary_agent.py
src/agentic/: api.py  (+14 more)
tests/: conftest.py  example_test.py  model_mock.py  test_a2a_tool.py  test_automatic_tools.py  test_basics.py  test_basics_thread.py  test_callbacks.py  test_cli_index.py  test_cli_index_document.py  test_cli_main.py  test_cli_secrets.py  test_cli_settings.py  test_context_window.py  test_geolocation_tool.py  test_github_tool.py  test_langchain_tools.py  test_linkedin_tool.py  test_llm_helper.py  test_mcp.py  test_mock_llm.py  test_models_commands.py  test_oauth_tool.py  test_rag_tool.py  test_rag_tool_thread.py  test_response_model.py  test_run_logging_core.py  test_run_logging_integration.py  test_thread_logging_core.py  test_thread_logging_integration.py  test_token_usage.py  test_tool_logging.py  test_tool_use.py  test_tools_init.py  test_trim_messages.py  test_web_search.py
(+212 files in other folders)
